/* --- CgiRegistry.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef CGIREGISTRY_H
#define CGIREGISTRY_H

class CgiRegistry {
public:
    CgiRegistry();
    ~CgiRegistry();

private:

};

#endif // CGIREGISTRY_H
