/* --- CgiSpec.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef CGISPEC_H
#define CGISPEC_H

class CgiSpec {
public:
    CgiSpec();
    ~CgiSpec();

private:

};

#endif // CGISPEC_H
