/* --- CookieJar.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef COOKIEJAR_H
#define COOKIEJAR_H

class CookieJar {
public:
    CookieJar();
    ~CookieJar();

private:

};

#endif // COOKIEJAR_H
