/* --- EventLoop.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef EVENTLOOP_H
#define EVENTLOOP_H

class EventLoop {
public:
    EventLoop();
    ~EventLoop();

private:

};

#endif // EVENTLOOP_H
