/* --- Headers.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef HEADERS_H
#define HEADERS_H

class Headers {
public:
    Headers();
    ~Headers();

private:

};

#endif // HEADERS_H
