/* --- HttpRequest.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef HTTPREQUEST_H
#define HTTPREQUEST_H

class HttpRequest {
public:
    HttpRequest();
    ~HttpRequest();

private:

};

#endif // HTTPREQUEST_H
