/* --- HttpResponse.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef HTTPRESPONSE_H
#define HTTPRESPONSE_H

class HttpResponse {
public:
    HttpResponse();
    ~HttpResponse();

private:

};

#endif // HTTPRESPONSE_H
