/* --- Location.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef LOCATION_H
#define LOCATION_H

class Location {
public:
    Location();
    ~Location();

private:

};

#endif // LOCATION_H
