/* --- Logger.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef LOGGER_H
#define LOGGER_H

class Logger {
public:
    Logger();
    ~Logger();

private:

};

#endif // LOGGER_H
