/* --- ProxyHandler.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef PROXYHANDLER_H
#define PROXYHANDLER_H

class ProxyHandler {
public:
    ProxyHandler();
    ~ProxyHandler();

private:

};

#endif // PROXYHANDLER_H
