/* --- RandomUtil.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef RANDOMUTIL_H
#define RANDOMUTIL_H

class RandomUtil {
public:
    RandomUtil();
    ~RandomUtil();

private:

};

#endif // RANDOMUTIL_H
