/* --- RouteResolver.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef ROUTERESOLVER_H
#define ROUTERESOLVER_H

class RouteResolver {
public:
    RouteResolver();
    ~RouteResolver();

private:

};

#endif // ROUTERESOLVER_H
