/* --- Router.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef ROUTER_H
#define ROUTER_H

class Router {
public:
    Router();
    ~Router();

private:

};

#endif // ROUTER_H
