/* --- Server.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef SERVER_H
#define SERVER_H

class Server {
public:
    Server();
    ~Server();

private:

};

#endif // SERVER_H
