/* --- ServerConfig.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef SERVERCONFIG_H
#define SERVERCONFIG_H

class ServerConfig {
public:
    ServerConfig();
    ~ServerConfig();

private:

};

#endif // SERVERCONFIG_H
