/* --- StaticHandler.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef STATICHANDLER_H
#define STATICHANDLER_H

class StaticHandler {
public:
    StaticHandler();
    ~StaticHandler();

private:

};

#endif // STATICHANDLER_H
