/* --- Upstream.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef UPSTREAM_H
#define UPSTREAM_H

class Upstream
{
public:
	Upstream();
	~Upstream();

private:
};

#endif // UPSTREAM_H
