/* --- UpstreamPool.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef UPSTREAMPOOL_H
#define UPSTREAMPOOL_H

class UpstreamPool {
public:
    UpstreamPool();
    ~UpstreamPool();

private:

};

#endif // UPSTREAMPOOL_H
