@startuml
skinparam packageStyle rectangle
title Overall Architecture (Networking + HTTP + Core + Routing + CGI + Util + Logger)

package "Networking" {
  class Server {
    +void start()
    +void stop()
    -EventLoop loop
    -ServerConfig config
  }
  class EventLoop {
    -fd_set read_fds
    -fd_set write_fds
    -int max_fd
    +void addFD(int fd, int events)
    +void removeFD(int fd)
    +void run()
    +void handleEvents()
  }
  class ClientConnection {
    -int fd
    -sockaddr_in addr
    +int readData()
    +int writeData()
    +void close()
  }
}

package "Config" {
  class ServerConfig
  class VirtualServer
  class Location
  class UpstreamPool
  class Upstream
  class RateLimitConfig
  class PutPatchConfig
  class CgiSpec
}

package "HTTP" {
  class HttpRequest
  class HttpResponse
  class Headers
  class CookieJar
  class HttpPreconditions
}

package "Core" {
  class ServerPipeline
  class SessionManager
  class Session
  class RateLimiter
  class PutPatchHandler
  class Balancer
  class ReverseProxy
  class Logger
}

package "Routing" {
  class Router
  class RouteResolver
  interface Handler
  class StaticHandler
  class ProxyHandler
}

package "CGI" {
  class CgiRegistry
  class CgiProcess
  class CgiHandler
}

package "Util" {
  class CiLess
  class StringUtil
  class TimeUtil
  class PathUtil
  class ETagUtil
  class CRC32
  class RandomUtil
}

' ===== Networking Relationships =====
Server --> EventLoop
EventLoop --> ClientConnection
ClientConnection --> HttpRequest
ClientConnection --> HttpResponse

' ===== Core & Config Relationships =====
ServerPipeline ..> ServerConfig
ServerPipeline *-- SessionManager
ServerPipeline *-- RateLimiter
ServerPipeline ..> ReverseProxy
ServerPipeline ..> Balancer
ServerPipeline ..> Logger

' ===== HTTP Relationships =====
HttpRequest *-- Headers
HttpRequest *-- CookieJar
HttpResponse *-- Headers
HttpPreconditions ..> ETagUtil

' ===== Routing =====
Router ..> RouteResolver
Router ..> StaticHandler
Router ..> ProxyHandler
Router ..> CgiHandler
Router ..> PutPatchHandler
Router ..> Logger

' ===== CGI =====
CgiHandler ..> CgiRegistry
CgiHandler ..> CgiProcess
CgiProcess ..> HttpRequest
CgiProcess ..> Headers

' ===== Util =====
Headers ..> CiLess
SessionManager ..> TimeUtil
SessionManager ..> RandomUtil
RateLimiter ..> TimeUtil
PutPatchHandler ..> PathUtil
PutPatchHandler ..> ETagUtil
ETagUtil ..> CRC32
StaticHandler ..> PathUtil

note bottom
Flow:
  - Server starts -> EventLoop monitors sockets
  - ClientConnection accepts & reads data
  - HTTP parser creates HttpRequest (Headers, CookieJar)
  - SessionManager.ensure_session() manages cookies
  - Router resolves VirtualServer + Location
  - If proxy -> Balancer picks Upstream -> ReverseProxy.forward()
  - Else if CGI -> CgiHandler -> CgiProcess
  - Else static / PUT / PATCH via handlers
  - HttpResponse built and sent to ClientConnection
  - Logger records per-step events
end note
@enduml
